--- a/Ejercicio VS/index.html
+++ b/Ejercicio VS/index.html
@@ -1,6 +1,7 @@
 <script>
-//Un programa que acomode los numeros de menor a mayor dados en un arreglo
-var numero = [2,4,20,15,13,12,11,16,17,5,6,10];
+/*Obtenga mediana de una serie de números situadas en un arreglo
+La cantidad de elementos del arreglo siempre es impar. Ejemplo [10,5,1] [5] [5,3,6,2,1]*/
+var numero = [2,4,20,15,13];
 var fin = false;
 // [2,4,5,6,10,11,12,13,15,16,17,20];
 while(fin != true){
@@ -14,5 +15,12 @@ while(fin != true){
         }
     }
 }
+var posicion;
+var mediana;
+if(numero.length %2 != 0){
+    posicion = (numero.length / 2) - 0.5;
+    mediana = numero[posicion];
+}
 console.log(numero);
+console.log("La media es: ",mediana);
 </script>
