--- a/Ejercicio VS/index.html
+++ b/Ejercicio VS/index.html
@@ -1,7 +1,7 @@
 <script>
-/*Obtenga mediana de una serie de números situadas en un arreglo
-La cantidad de elementos del arreglo siempre es impar. Ejemplo [10,5,1] [5] [5,3,6,2,1]*/
-var numero = [2,4,20,15,13];
+//Obten la mediana de una serie de números situadas en un arreglo, estos seran al azar. Ejemplo [10,5,1] [5] [5,3,6,2,1]
+// Ejemplo [10,5,1,9] [3]
+var numero = [2,4,20,15];
 var fin = false;
 // [2,4,5,6,10,11,12,13,15,16,17,20];
 while(fin != true){
@@ -20,7 +20,10 @@ var mediana;
 if(numero.length %2 != 0){
     posicion = (numero.length / 2) - 0.5;
     mediana = numero[posicion];
+}else{
+    posicion = numero.length / 2;
+    mediana = (numero[posicion] + numero[posicion - 1]) / 2;
 }
 console.log(numero);
-console.log("La media es: ",mediana);
+console.log("La mediana es: " + mediana);
 </script>
