--- a/Practica de examen/datos_comentado.html
+++ b/Practica de examen/datos_comentado.html
@@ -141,7 +141,7 @@
 	function buscar_alumno(busqueda,alumnos){
 		for(let a=0; a<alumnos.length; a++){
 			if(alumnos[a][0]==busqueda || alumnos[a][1]==busqueda){ // Compara si la busqueda es igual al nombre o mátricula.
-				let datos_alumno=""; // Iinicia una variable para almacenar los datos del usuario.
+				let datos_alumno=""; // Inicia una variable para almacenar los datos del usuario.
 				datos_alumno+="Nombre: "+alumnos[a][0];
 				datos_alumno+="\nMátricula: "+alumnos[a][1];
 				datos_alumno+="\nGrupo: "+alumnos[a][2];
